# WoofWorld

./: .gitignore  README.md  SERVER_STARTUP_GUIDE.md  environment.yml  final_verification.html  index.html  package-lock.json  package.json  tailwind.config.js  test_cors_fix.html  test_cors_fix_updated.html
backend/: alembic.ini  setup.py
src/: App.jsx  index.css
test/: conftest.py  requirements.txt  test_auth.py  test_breeds.py  test_database.py  test_favorites.py
woofworld_backend/: admin_login.json  alembic.ini  app.py  check_user.py  create_admin.py  debug_admin.py  debug_post_fact.py  final_test.bat  login_response.json  pyproject.toml  quick_start.py  quick_test.py  setup.py  simple_test.py  start.bat  start_backend.bat  start_server.py  start_server_debug.py  start_with_cors_fix.bat  test_admin_facts.py  test_admin_post.html  test_and_start.py  test_fact_model.py  test_final.py  test_routes.py  test_with_timeout.py  update_admin_direct.py
woofworld_backend/alembic/: env.py
woofworld_backend/woofworld_backend/: __init__.py  routes.py  routes_fixed.py  security.py  tweens.py  tweens_fixed.py
woofworld_backend/woofworld_backend/models/: __init__.py  breed.py  fact.py  favorite.py  meta.py  user.py  video.py
woofworld_backend/woofworld_backend/scripts/: add_sample_videos.py  initializedb.py  make_admin.py  setup_uploads.py
woofworld_backend/woofworld_backend/views/: auth.py  breed.py  fact.py  facts.py  favorite.py  popular_breeds.py  video.py
woofworld_backend/woofworld_backend/views/admin/: breeds.py  dashboard.py  facts.py  users.py  videos.py
(+70 files in other folders)
